--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -1,10 +1,85 @@
-/*@import 'core/variables';
-@import 'core/reset';
-@import 'components/code';
-@import 'components/links';
-@import 'layout/page';
-@import 'layout/header';
-@import 'layout/footer';
-@import 'pages/index';*/
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0; }
+
+.code {
+  font-size: 16px;
+  background: #d8d8d8;
+  padding: 0 5px;
+  border-radius: 5px; }
+
+.link__adalab:hover {
+  background-color: #099d8d;
+  color: #fff; }
+
+.link__github:hover {
+  background-color: #CCC;
+  color: #000; }
+
+* {
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0; }
+
+header {
+  width: 320px;
+  height: 112px;
+  padding: 10px 82.5px 13px 83px;
+  border: solid 20px var(--pinkish-grey);
+  background-color: var(--white); }
+
+.Blog {
+  width: 48px;
+  height: 19px;
+  margin: 0 20.5px 0 0;
+  font-family: Rubik;
+  font-size: 16px;
+  font-weight: normal;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: normal;
+  letter-spacing: normal;
+  text-align: center;
+  color: var(--greyish-brown); }
+
+.Contacto {
+  width: 82px;
+  height: 19px;
+  margin: 0 0 0 20.5px;
+  font-family: Rubik;
+  font-size: 16px;
+  font-weight: normal;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: normal;
+  letter-spacing: normal;
+  text-align: center;
+  color: var(--greyish-brown); }
+
+#Bitmap {
+  width: 154.5px;
+  height: 60px;
+  margin: 0 0 10px; }
+
+Footer {
+  width: 320px;
+  height: 90px; }
+
+.Adalab-2018 {
+  width: 109px;
+  height: 19px;
+  font-family: Rubik;
+  font-size: 16px;
+  font-weight: normal;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: normal;
+  letter-spacing: normal;
+  color: #676a6d; }
+
+.main__list {
+  padding-left: 2rem;
+  padding-bottom: 20px; }
 
 /*# sourceMappingURL=main.css.map */
