Add almost finish footer

--- a/src/scss/layout/_footer.scss
+++ b/src/scss/layout/_footer.scss
@@ -1,17 +1,22 @@
-Footer{
-width: 320px;
-height: 90px;
+
+.footer {
+  width: 100vw;;
+  height: 90px;
+  margin: 366px 0 0;
+  padding: 34px 105px 37px 106px;
+  text-align: center;
+  background-color: #252525;
 }
 
 .Adalab-2018 {
-    width: 109px;
-    height: 19px;
-    font-family: Rubik;
-    font-size: 16px;
-    font-weight: normal;
-    font-stretch: normal;
-    font-style: normal;
-    line-height: normal;
-    letter-spacing: normal;
-    color: #676a6d;
-  }
+  width: 109px;
+  height: 19px;
+  font-family: Rubik;
+  font-size: 16px;
+  font-weight: normal;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: normal;
+  letter-spacing: normal;
+  color: #676a6d;
+}
