--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -3,31 +3,18 @@
   margin: 0;
   padding: 0; }
 
-.code {
-  font-size: 16px;
-  background: #d8d8d8;
-  padding: 0 5px;
-  border-radius: 5px; }
-
-.link__adalab:hover {
-  background-color: #099d8d;
-  color: #fff; }
-
-.link__github:hover {
-  background-color: #CCC;
-  color: #000; }
-
 * {
   box-sizing: border-box;
   padding: 0;
   margin: 0; }
 
-header {
+.header {
   width: 320px;
   height: 112px;
   padding: 10px 82.5px 13px 83px;
   border: solid 20px var(--pinkish-grey);
-  background-color: var(--white); }
+  background-color: #ffffff;
+  text-align: center; }
 
 .Blog {
   width: 48px;
@@ -62,9 +49,13 @@ header {
   height: 60px;
   margin: 0 0 10px; }
 
-Footer {
-  width: 320px;
-  height: 90px; }
+.footer {
+  width: 100vw;
+  height: 90px;
+  margin: 366px 0 0;
+  padding: 34px 105px 37px 106px;
+  text-align: center;
+  background-color: #252525; }
 
 .Adalab-2018 {
   width: 109px;
@@ -77,9 +68,5 @@ Footer {
   line-height: normal;
   letter-spacing: normal;
   color: #676a6d; }
-
-.main__list {
-  padding-left: 2rem;
-  padding-bottom: 20px; }
 
 /*# sourceMappingURL=main.css.map */
